gl31-master/src/test/deca/syntax/valid/complet/class_meth3.deca
// Description:
//    tests de programme correct syntaxiquement pour complet
//
// Resultats:
//    Succes attendu
//
// Historique:
//    cree le 18/01/2021
class Test{
    void methodeTest(int param1, float param2) asm ("multi line string");
}
